--- a/exemplo5.html
+++ b/exemplo5.html
@@ -16,11 +16,11 @@
         let num1, num2, soma;
         num1 = prompt("Informe o primeiro numero:");
         num2 = prompt("Informe o segundo numero:");
-        soma = parseInt(num1) + parseInt(num2);
+        soma = parseFloat(num1) + parseFloat(num2);
 
         alert(`${num1} + ${num2} = ${soma}`)
-        document.write("Olá!, " + nome + "!!!")
-        console.log("Olá!, " + nome + "!!!")
+        document.write(`${num1} + ${num2} = ${soma}`)
+        console.log(`${num1} + ${num2} = ${soma}`)
     </script>
 </body>
 </html>
